# nomount2.0

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  update.json
.github/workflows/: build.yaml
kernel_patches/: README.md  nomount-android12-5.10.patch  nomount-android13-5.15.patch  nomount-android14-6.1.patch  nomount-android15-6.6.patch  nomount-android16-6.12.patch
kernel_patches/susfs/: README.md  nomount-android12-5.10.patch  nomount-android13-5.15.patch  nomount-android14-6.1.patch  nomount-android15-6.6.patch  nomount-android16-6.12.patch
module/: customize.sh  metamount.sh  module.prop  post-fs-data.sh  service.sh
module/webroot/: index.html
scripts/: package.sh
src/: main.rs  mount.rs  overlay.rs
src/cli/: handlers.rs  mod.rs
src/vfs/: ioctls.rs  mod.rs  types.rs
tests/adb-detect/app/: build.gradle
tests/adb-detect/app/src/main/java/com/nomount/test/: AdbDetect.java
